# CarXstream-Car-Selling-ChatBot

./: .gitignore  EDA.ipynb  Hyderabad_scraped_car_data.csv  README.md  admin.py  app.py  main.py  pyproject.toml  user.py
Agents/: buy.py
DB/: EDA.ipynb  car_data.csv  car_data.db  create.py  test.py
Prompts/: buy.py
tools/: comparison_tool.py  recommend_tool.py  sql_database.py
